<resources>
    <string name="app_name" translatable="false">Run Tracker</string>

    <string name="google_maps_key" translatable="false">AIzaSyBeDIuVXO-RhHKVqZ1PyxGAdkzr0F6a9LA</string>

    <string name="internet_error_message">No internet connection</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_code">Enter Code</string>
    <string name="ok_">OK</string>
    <string name="continue_">Continue</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="all_runs_history">All Runs History</string>
    <string name="delete">Delete</string>

    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="running">Running</string>
    <string name="achievements">Achievements</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="name_error">Must be not empty and max 12 characters</string>
    <string name="height_error">Must be between 100 to 250</string>
    <string name="weight_error">Must be between 30 to 200</string>
    <string name="empty_error">Must be not empty</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="general_settings">General Settings</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="sound">Sound</string>
    <string name="picture">Picture</string>

    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="age">AGE</string>
    <string name="bmi" translatable="false">BMI</string>
    <string name="birth_date">BIRTH DATE</string>
    <string name="height">HEIGHT (CM)</string>
    <string name="weight">WEIGHT (KG)</string>

    <string name="duration">DURATION</string>
    <string name="number_of_runs">Number of runs</string>
    <string name="average_time">AVERAGE TIME</string>
    <string name="max_time">MAX TIME</string>
    <string name="average_speed">AVERAGE SPEED (KPH)</string>
    <string name="max_speed">MAX SPEED (KPH)</string>
    <string name="average_distance">AVERAGE DISTANCE (KM)</string>
    <string name="max_distance">MAX DISTANCE (KM)</string>
    <string name="average_calories">AVERAGE CALORIES</string>
    <string name="max_calories">MAX CALORIES</string>
    <string name="total_time">TOTAL TIME</string>
    <string name="total_distance">TOTAL DISTANCE (KM)</string>
    <string name="total_calories">TOTAL CALORIES</string>
    <string name="save_changes">SAVE CHANGES</string>

    <string name="start_time">START</string>
    <string name="end_time">END</string>

    <string name="friends_request">Requests</string>
    <string name="search_friends">Search</string>
    <string name="remove_friend">Remove</string>
    <string name="cancel_request">Cancel Request</string>

    <string name="history">HISTORY</string>
    <string name="statistics">STATISTICS</string>

    <string name="compete_friend">Competition</string>
    <string name="compete">Compete</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="send_request">Send Request</string>

    <string name="distance">DISTANCE (KM)</string>
    <string name="speed">SPEED (KPH)</string>
    <string name="calories">CALORIES</string>
    <string name="run">Run</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="loading_location">Loading your location</string>

    <string name="kilometer">KM</string>

</resources>