<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.Activity_Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/settings_LAY_appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/settings_TLB_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:title="@string/settings"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="14dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/general_settings" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/settings_SWT_sound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textAlignment="viewStart"
                android:text="@string/sound" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="14dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/profile_settings" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/settings_SWT_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textAlignment="viewStart"
                android:text="@string/picture" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/settings_SWT_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textAlignment="viewStart"
                android:text="@string/age" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/settings_SWT_bmi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textAlignment="viewStart"
                android:text="@string/bmi" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/settings_SWT_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textAlignment="viewStart"
                android:text="@string/height" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/settings_SWT_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textAlignment="viewStart"
                android:text="@string/weight" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/settings_BTN_saveChanges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                app:cornerRadius="50dp"
                app:strokeColor="@color/purple_500"
                android:text="@string/save_changes" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>