<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.friends.Fragment_Friends"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/friends_LAY_tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        app:tabTextColor="@color/white"
        app:tabIndicatorColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/friends_TAB_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friends" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/friends_TAB_friendsRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friends_request" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/friends_TAB_searchFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_friends" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/friends_VPA_selectedPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$scrollingViewBehavior" />/>

</LinearLayout>
